--- a/package.json
+++ b/package.json
@@ -12,23 +12,24 @@
   "dependencies": {
     "@iarna/toml": "2.2.5",
     "@thi.ng/dgraph": "2.1.50",
-    "chalk": "5.2.0",
+    "chalk": "5.3.0",
     "escape-string-regexp": "5.0.0",
     "execa": "7.1.1",
     "flexver": "1.1.0",
     "handlebars": "4.7.7",
     "mem": "9.0.2",
     "multimatch": "6.0.0",
-    "tempy": "3.0.0",
+    "p-map": "6.0.0",
+    "tempy": "3.1.0",
     "undici": "5.22.1",
     "walkdir": "0.4.1",
     "yargs": "17.7.2",
     "zod": "3.21.4"
   },
   "devDependencies": {
-    "@types/node": "20.3.1",
+    "@types/node": "20.4.1",
     "@types/yargs": "17.0.24",
-    "typescript": "5.1.3",
+    "typescript": "5.1.6",
     "xo": "0.54.2"
   },
   "bin": {
