--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "__comment": "This typescipt config is managed by `@stayradiated/jsconfig`",
   "compilerOptions": {
     "outDir": "dist",
-    "module": "ES2022",
-    "moduleResolution": "node16",
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "moduleDetection": "force",
     "target": "ES2022",
     "lib": ["ES2022"],
